kubernetes/apps/media/profilarr/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: profilarr-480p-com
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/name: Profilarr
    gethomepage.dev/pod-selector: app.kubernetes.io/name=profilarr
    gethomepage.dev/icon: mdi-format-list-checks
spec:
  hostnames:
    - profilarr.480p.com
  parentRefs:
    - name: envoy-480p-com-public
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: profilarr
          port: 6868
