kubernetes/apps/media/profilarr/app/securitypolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.envoyproxy.io/securitypolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: profilarr-480p-com-auth
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: profilarr-480p-com
  extAuth:
    failOpen: false
    headersToExtAuth:
      - X-Forwarded-For
      - X-Forwarded-Host
      - X-Forwarded-Proto
      - X-Forwarded-Uri
      - accept
      - authorization
      - cookie
      - user-agent
    http:
      backendRefs:
        - name: tinyauth-480p-com
          namespace: network
          port: 3000
      path: /api/auth/envoy?path=
      headersToBackend:
        - Location
        - Set-Cookie
